--- a/Style.css
+++ b/Style.css
@@ -1,8 +1,16 @@
-red {
+section {
+    height: 80vh;
+    border: 1px solid black;
+}
+
+p {
+    color: blue !important;
+}
+
+.red {
     color: red;
 }
 
-blue {
-    color: blue;
-
+#title {
+    color: black;
 }
