--- a/Style.css
+++ b/Style.css
@@ -7,3 +7,19 @@
     margin: 15px;
     box-sizing: border-box;
 }
+
+
+
+
+.buttons{
+    width = 30%
+  }
+  .circle-button{
+    width: 100%;
+      height:0;
+      padding-bottom: 100%;
+    border-radius: 50%;
+      border:0px solid #cfdcec;
+      overflow:hidden;
+   
+  }
