--- a/Style.css
+++ b/Style.css
@@ -23,3 +23,18 @@
       overflow:hidden;
    
   }
+
+
+
+  .buttons{
+    width = 30%
+  }
+  .circle-button{
+    width: 100%;
+    height: 100px;;
+    padding-bottom: 100%;
+    border-radius: 70%;
+    border:0px solid #cfdcec;
+      overflow:hidden;
+   
+  }
